--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -29,6 +29,14 @@
     padding: 16px 24px;
   }
 
+  .logo-text {
+    font-size: 24px;
+  }
+
+  .logo-img {
+    height: 35px;
+  }
+
   .logo {
     font-size: 24px;
   }
